
2019-08-18  Bruno Haible  <bruno@clisp.org>

	build: Don't use an obsolete libtool macro.
	* m4/exported.m4 (gt_GLOBAL_SYMBOL_PIPE): Require
	_LT_CMD_GLOBAL_SYMBOLS, not AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE.

2019-06-30  Bruno Haible  <bruno@clisp.org>

	build: Fix build errors with MSVC.
	* lib/exported.sh.in: Remove one level of eval.
	* lib/Makefile.am (config.h): Redirect compiler output to stderr.
	Remove symbols that contain an '@'.

2019-05-11  Bruno Haible  <bruno@clisp.org>

	Update bug reporting instructions.
	* README: Tell users to report bugs in the bug tracker or by email.
	* doc/libunistring.texi (Reporting problems): Likewise.

2019-04-01  Bruno Haible  <bruno@clisp.org>

	build: Separate git operations from build operations.
	* gitsub.sh: New file, from gnulib.
	* .gitmodules: New file.
	* autogen.sh: Remove all git operations. Look at GNULIB_SRCDIR
	environment variable. Ignore the GNULIB_TOOL environment variable.
	* HACKING: Explain when to use gitsub.sh.

2019-03-13  Bruno Haible  <bruno@clisp.org>

	build: Update Windows support.
	* lib/libunistring.rc: Update.

2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Assume that the texinfo sources are in the source dir.
	* doc/Makefile.am (stamp-vti, libunistring.html, libunistring_toc.html):
	Lookup libunistring.texi in $(srcdir).

2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Fix hyperlinks to table of contents in HTML doc.
	Reported by Akim Demaille <akim.demaille@gmail.com>.
	* doc/Makefile.am (libunistring_toc.html): Replace references to
	libunistring.html with references to libunistring_toc.html.

2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Make function declarations easier to read.
	* doc/uni*.texi: Inside the argument list of function declarations, use
	no-break spaces instead of spaces, except directly after a comma.
	* doc/libunistring.texi: Bump copyright year.

2019-02-13  Bruno Haible  <bruno@clisp.org>

	build: Put the .sym file in the source directory.